@@ -344,7 +344,7 @@
   (let ((source "load-test.tmp") fasl)
     (with-open-file (f source :direction :output
                        :if-does-not-exist :create :if-exists :supersede)
-      (write-string "(defun a () (quit))" f)
+      (write-string "(defun a () (sb-unix:unix-exit))" f)
       ;; a full warning even though the PLEASE-DONT- function is only :early
       (write-string "(defun b () (please-dont-use-this 1) (really-dont-do-it 2))" f)
       (write-string "(defun c () (you-cant-use-this 3))" f))
